@@ -5,6 +5,9 @@
     
 = 1.3.1 / ???
 
+  + Made it possible to pass a custom Parslet::Source implementor to #parse.
+    (see #63)
+
 = 1.3.0 / 5Mar2012
 
   ! Parslet::Transform::Context is now much more well-behaved. It has
